--- a/app/src/main/res/layout/row_pet_simple.xml
+++ b/app/src/main/res/layout/row_pet_simple.xml
@@ -3,10 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingEnd="12dp">
 
     <ImageView
-        android:id="@+id/buttonAddPet"
+        android:id="@+id/imageRowSimplePet"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/circular_shape"
