--- a/app/src/main/res/layout/fragment_add_pet.xml
+++ b/app/src/main/res/layout/fragment_add_pet.xml
@@ -112,7 +112,8 @@
             <com.google.android.material.button.MaterialButtonToggleGroup
                 android:id="@+id/toggleButtonPetGender"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:singleSelection="true">
 
                 <Button
                     android:id="@+id/buttonHe"
@@ -142,7 +143,8 @@
             <com.google.android.material.button.MaterialButtonToggleGroup
                 android:id="@+id/toggleButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:singleSelection="true">
 
                 <Button
                     android:id="@+id/buttonNeuter"
@@ -195,7 +197,7 @@
                 android:id="@+id/buttonPetComplete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="등록하" />
+                android:text="등록하기" />
 
         </LinearLayout>
     </ScrollView>
