--- a/app/src/main/res/layout/fragment_match_history.xml
+++ b/app/src/main/res/layout/fragment_match_history.xml
@@ -34,18 +34,18 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp">
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipFilterDog"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:checkedChip="@id/chipAll">
+                android:orientation="horizontal">
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chipAll"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전체" />
-            </com.google.android.material.chip.ChipGroup>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewPetFilter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewMatchHistory"
