--- a/app/src/main/res/layout/fragment_walk_history_detail.xml
+++ b/app/src/main/res/layout/fragment_walk_history_detail.xml
@@ -125,7 +125,7 @@
                             android:id="@+id/textView16"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="40:00"
+                            android:text="00:40:00"
                             android:textAlignment="center"
                             android:textAppearance="?attr/textAppearanceDisplayMedium" />
                     </LinearLayout>
@@ -160,13 +160,29 @@
                                 android:textAlignment="center"
                                 android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
 
-                            <TextView
-                                android:id="@+id/textView7"
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="1.92"
-                                android:textAlignment="center"
-                                android:textAppearance="?attr/textAppearanceDisplayMedium" />
+                                android:layout_height="match_parent"
+                                android:gravity="center_horizontal"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView7"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="1.92"
+                                    android:textAlignment="center"
+                                    android:textAppearance="?attr/textAppearanceDisplayMedium" />
+
+                                <TextView
+                                    android:id="@+id/textView24"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="km"
+                                    android:textAlignment="center"
+                                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
+                            </LinearLayout>
+
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
@@ -184,6 +200,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center_horizontal"
                             android:orientation="vertical">
 
                             <TextView
@@ -194,7 +211,7 @@
                                 android:textAlignment="center"
                                 android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
 
-                            <ImageView
+                            <de.hdodenhof.circleimageview.CircleImageView
                                 android:id="@+id/imageView8"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
