--- a/app/src/main/res/layout/row_walk_history_monthly.xml
+++ b/app/src/main/res/layout/row_walk_history_monthly.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="12dp">
 
     <com.google.android.material.card.MaterialCardView
         style="@style/Widget.Material3.CardView.Elevated"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentPadding="24dp">
+        app:contentPadding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
